[package]
name = "poker_hand_evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postflop-solver = { git = "https://github.com/b-inary/postflop-solver" }
clap = { version = "4.3.21", features = ["derive"] }
itertools = "0.11.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rayon = "1.7.0"
csv = "1.2.2"
